--- a/source/_posts/2015-09-24-add-1.markdown
+++ b/source/_posts/2015-09-24-add-1.markdown
@@ -66,7 +66,7 @@ from scratch instead of tweaking something that worked.  Your software would not
 you spent months writing it instead of hours tweaking something that was close.  Pain... pain... pain...
 
 When I shifted to Java, I dropped to a '6' from an '8' in Smalltalk.  Lots of developers hated leaving Smalltalk
-because of that.  But in my case, I cared about the libraries and people who were moving into Java.  It is not
+because of that.  But in my case, I cared about the libraries and people who were moving into Java.  It was not
 a great language, but it had a lot of potential.  And Smalltalk imploded when Java was released for free.
 
 ## Automated Testing
@@ -81,8 +81,9 @@ XP is very much oriented to "Write tests first".  That is stupid.  You need to f
 writing tests is not a good way to figure out how to do something.  You _do it_ to figure out how to do it.  But
 after you _do it_, you should write tests to make sure the code still does it tomorrow.  Unfortunately, people
 usually forget to write tests after, hence the XP maxim.  I lucked out and a whole bunch of tests existed
-when I showed up.  I needed to scale the product to be 1-million times bigger and 1-thousands times faster.
-And not break any existing test (unless we changed functionality).
+when I showed up.  I needed to scale the product to bigger and faster.  On the order of a million times
+bigger data set and a thousands times faster execution.  But it should still work, and if it did it would
+not fail any existing test (unless we changed functionality).
 
 That sold me on automated testing.  It made me slower (say a '5') but it protected me from other people breaking
 my working code.  Eventually we used Excel for the automated tests, the business people wrote them directly, and
@@ -94,13 +95,13 @@ I became an '8' again when I started using <http://grails.org/>.  The language (
 was now approaching Smalltalk if a bit uglier.  And the automated binding to the database, plugin model,
 and other great features in Grails made it so I simply didn't have to worry about a lot of stuff.  I
 was getting different benefits from Smalltalk, but they netted out.  And I had the same benefit as
-Smalltalk in onboarding others: (1) This is the Grails way, (2) This is my 'tweaks' to the Grails way...
-now start asking for features and build them.
+Smalltalk in onboarding others: (1) This is the Grails way, (2) These are my 'tweaks' to the Grails way...
+now start asking for features and go build them.
 
 ## Flex and Angular
 
 On the client side, I had shifted to using Flex very early on for a company called Winster.  It was a bit
-bleading edge at the time, but Flex was very powerful and very productive.  It was basically Smalltalk
+bleeding edge at the time, but Flex was very powerful and very productive.  It was basically Smalltalk
 on the client.  Eventually Flex/Flash became non-viable because of the iPhone issue, but then Angular
 jumped in to replace it.  I tried others (e.g. YUI, Sencha, etc.) and they have pros-and-cons, but Angular
 is very good and very Flex-like.
