--- a/source/_posts/2015-09-24-add-1.markdown
+++ b/source/_posts/2015-09-24-add-1.markdown
@@ -37,7 +37,7 @@ Then for fun, I was sent into the trenches again but this time had to use _some_
 but back down to 10x or a bit better.  As the trenches became "less mine" and "more theirs" I would slow down more and more.
 Eventually everyone tired of each other and the experiments stopped.
 
-Bizarrely, this company that saw the 20x continues to use the slow, unreliable, method of development.  The workers may have
+Bizarrely, this company that saw the 20x... continues to use the slow, unreliable, method of development.  The workers may have
 been scared that the company would only need one in ten of them if they changed to a better method.
 
 ## Development Stagnation
@@ -53,7 +53,7 @@ was not possible.  Or at least the scale had to be different (i.e. add 50% for e
 The problem was that software development had made _absolutely no progress_ for 40+ years.  "You lie!" people claim.  "We build software very
 differently then we used to!" they say.  Yes, _some people_ have made progress.  But it was people doing it wrong for 40+ years.  The
 people who did it right (Xerox PARC, MIT's Lisp group, Xerox El Segundo, Tektronics, etc.) were buzzing along happily with a 4-10x speed
-of the rest of the industry.
+advantage over the rest of the industry.
 
 What is this amazing way to build software?  Well, for 40+ years, the best way to write software was to take a working computer and tweak it.
 Then clone that. Voila: you have a new capability on all your computers.  Testing is trivial.  Demoing is trivial.  Fixing
@@ -71,7 +71,7 @@ a great language, but it had a lot of potential.  And Smalltalk imploded when Ja
 
 ## Automated Testing
 
-So I am in this crappy new language, dealing with jars (usually with source), deploying to containers, building out
+So I am in this crappy new language, dealing with jars/libraries (usually without source), deploying to containers, building out
 linux servers in data centers, and trying to make this whole thing scale to millions of users and international
 development teams who like to break my code.  It was fun and hell at the same time.  To avoid my going down to a '4'
 because other people broke my code, I leveraged XP practices that were entrenched in startup #3 (Evant / Retail Aspect).
@@ -81,8 +81,8 @@ XP is very much oriented to "Write tests first".  That is stupid.  You need to f
 writing tests is not a good way to figure out how to do something.  You _do it_ to figure out how to do it.  But
 after you _do it_, you should write tests to make sure the code still does it tomorrow.  Unfortunately, people
 usually forget to write tests after, hence the XP maxim.  I lucked out and a whole bunch of tests existed
-when I showed up.  I needed to scale the product to bigger and faster.  On the order of a million times
-bigger data set and a thousands times faster execution.  But it should still work, and if it did it would
+when I showed up to help save Evant.  I needed to scale the product to be bigger and faster.  On the order of a million times
+bigger data set and a thousands times faster execution.  But it should still work, and if it did work it would
 not fail any existing test (unless we changed functionality).
 
 That sold me on automated testing.  It made me slower (say a '5') but it protected me from other people breaking
