--- a/source/_posts/2015-10-15-addstack-3.markdown
+++ b/source/_posts/2015-10-15-addstack-3.markdown
@@ -6,7 +6,7 @@ comments: true
 categories: IT Automation Cloud Git ADD Grails Stack
 ---
 
-This is the second series describing a radically more productive development and delivery environment.  The
+This is the second series describing the ADD: a radically more productive development and delivery environment.  The
 first article is here: [Intro](/blog/addstack-1/) and described the truth and lies about developing software.
 The second article dealt with 'Testing'.
 
