--- a/source/_posts/2015-10-21-addstack-9.markdown
+++ b/source/_posts/2015-10-21-addstack-9.markdown
@@ -104,7 +104,7 @@ make sure a worker can really handle the chore. Using the 'cron_1m' model of thi
 put things into buckets every minute.  But workers have to look for any not-done chore and pick it up if they can.
 
 An advantage of the one-minute cron is we automatically can have a nice 30-second jitter.  That plus some kind of randomization
-makes it very unlikely that workers will acquire the same chore at the same time.  But if they do, one will win due
+in chore selection makes it very unlikely that workers will acquire the same chore at the same time.  But if they do, one will win due
 to 'git push' timing.
 
 ##### Identity
